Layout shift fixes on page load - prevent scrolling events on page load - Leadflet Marker Cluster versioning to latest stable version 1.5.3

--- a/app/static/css/_home.css
+++ b/app/static/css/_home.css
@@ -8,9 +8,10 @@
 /* Default styles that apply to screens with a maximum height of 768px (Defra laptops) */
 /* ------------------- */
 
-/* Initialise the mouse to be disabled, whilst page loads */
+/* Initialise the mouse to be disabled and scroll bar to be hidden, whilst page loads */
 body {
   pointer-events: none;
+  overflow: hidden;
 }
 
 /* Overlay of transparent grey, whilst the page loads */
@@ -102,6 +103,11 @@ body {
     font-size: 17px;
     height: 335px;
 }
+
+.home-box-about {
+    height: 448px;
+}
+
 .custom-govuk-button-home {
     margin-bottom: 0;
     font-size: 15px;
