--- a/app/static/css/_navbar.css
+++ b/app/static/css/_navbar.css
@@ -24,13 +24,6 @@
     padding: 1px;
 }
 
-/* APHA logo */
-.navbar-brand img {
-    height: 40px;
-    margin-right: 10px;
-    margin-top: 8px
-}
-
 /* Tab navigation links */
 .navbar-nav {
     margin-left: 50px;
